Fixing the advanced search field alignment issue and the roman numerals in classification

--- a/api/dric-api-webapp/src/main/webapp/css/style.css
+++ b/api/dric-api-webapp/src/main/webapp/css/style.css
@@ -349,7 +349,7 @@ enu {
 	max-height: 75px;
 }
 
-.modal-body {
+#drugRecallDetailsBody {
 	max-height: 300px;
 	overflow-y: auto;
 }
